--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 						<div class="content">
 							<div class="inner">
 								<h1>BEKApps</h1>
-								<p>Discover everything made by <a href="https://Bekapps.com">Behrad Kazemi</a><br></p>
+								<p>Discover everything made by <a href="https://www.linkedin.com/in/kaazemi/">Behrad Kazemi</a><br></p>
 							</div>
 						</div>
 						<nav class="use-middle">
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">Works</a></li>
 								<li class="is-middle"><a href="#about">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -40,14 +40,86 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt=""></span>
 								<p>Excellent Details make Perfection and Perfection is not a detail.</p>
-								<p>I have 4 years of experience working iOS Development. I have a bachelor’s degree in Software eng. I consider myself a good public speaker, and I have a good sense of humor. I know how my brain works! so I can learn new thing much faster. I Love to use my creativity in daily life. 
+								<p><h3>Personality</h3></p>
+								<p>I have 4 years of experience working iOS Development. I have a bachelor’s degree in Software eng. I consider myself a good public speaker but I'm always ready to listen, and I have a good sense of humor. I know how my brain works! so I can learn new thing much faster. I Love to use my creativity in daily life.
 								Over thinking about philosophy always makes me excited.
 								Colors and musics always make me happy! check out my <a href="#work">awesome works</a>.</p>
+								<p><h3>Skills</h3>
+								<h4>Languages</h4>
+								• Swift<br>
+								• Objective-C<br>
+								• Python<br>
+								• C++<br><br>
+
+								<h4>Architectures</h4>
+								• The Clean Architecture<br>
+								• MVVMC<br>
+								• MVVM<br>
+								• MVC<br>
+								• VIPER<br><br>
+
+								<h4>Concepts</h4>
+								• Project Managment<br>
+								• UX Design<br>
+								• iOS human interface Guidlines<br>
+								• Generics<br>
+								• OOP<br>
+								• POP<br>
+								• Agile<br><br>
+							
+								<h4>Frameworks & Libraries</h4>
+								• RxSwift <br>
+								• RxCocoa<br>
+								• RxAlamofire<br>
+								• RxStarScream<br>
+								• RxDatasources<br>
+								• RxRealm<br><br>
+								• CoreML (Intermediate)<br>
+								• AVKit<br>
+								• AVAudioPlayer<br><br>
+								• NEVPNManager<br><br>
+								• CoreLocation<br>
+								• Google Map API<br><br>
+								• Google SignIn<br>
+								• Google Contacts<br>
+								• Google Gmail<br>
+								• Hero<br>
+								• Stellar<br>
+								• Lottie<br><br>
+								• XMPP<br>
+								• Socket.io<br><br>
+								• OneSignal<br>
+								• Fabrics<br>
+								• FireBase<br>
+								• Crashlytics<br><br>
+								• SKLearn (Intermediate)<br>
+								• Numpy (Intermediate)<br><br>
+
+								<h4>Tools</h4>
+								• Git<br>
+								• Xcode<br>
+								• Pycharm<br>
+								• Sketch App<br>
+								• PaintCode<br><br>
+
+								<h4>Abilities</h4>
+								• Creativity<br>
+								• Research<br>
+								• Team Work<br>
+								• Leadership<br>
+								• Fast Learning<br>
+								• Brain Storming<br>
+								• Cryptocurrency Trading Techniques<br>
+								• Understanding Deep Philosophical Thoughts<br><br>
+
+								<h4>Negetiv Points</h4>
+								• Under Destruction ... <br>
+							</p>
 							<div class="close">Close</div></article>
 
-						<!-- Work -->
+						<!-- Works -->
 							<article id="work" style="display: none;">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Works</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt=""></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
@@ -84,10 +156,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/KazemiBehrad" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/kaazemi/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/kaazemi/" class="icon fa-diamond"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://github.com/behrad-kzm" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							<div class="close">Close</div></article>
 
