--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html><head>
 		<title>BEKApps By Behrad Kazemi</title>
 		<meta charset="utf-8">
+		<meta name="google-site-verification" content="-GQIhwEZTyqEnDvsebDF-WDsNjNVadJePYnSNbhLCN0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<noscript>&lt;link rel="stylesheet" href="assets/css/noscript.css" /&gt;</noscript>
@@ -127,7 +128,7 @@
 
 						<!-- About -->
 							<article id="about" style="display: none;">
-								<h2 class="major">About</h2>
+								<h2 class="major">CV</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt=""></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							<div class="close">Close</div></article>
@@ -158,7 +159,6 @@
 								<ul class="icons">
 									<li><a href="https://twitter.com/KazemiBehrad" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/kaazemi/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://www.linkedin.com/in/kaazemi/" class="icon fa-diamond"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/behrad-kzm" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							<div class="close">Close</div></article>
