--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>BEKApps</h1>
-								<p>Discover everything made by <a href="https://www.linkedin.com/in/kaazemi/">Behrad Kazemi</a><br></p>
+								<p>Hello, I'm <a href="https://www.linkedin.com/in/kaazemi/">Behrad Kazemi</a><br>I'm a Senior iOS Developer</p>
 							</div>
 						</div>
 						<nav class="use-middle">
@@ -122,8 +122,14 @@
 							<article id="work" style="display: none;">
 								<h2 class="major">Works</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt=""></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p><h3>● Barande Bash (TV Show's App)</h3>
+								<span class="icons Barandebash"></span><br>Barande Bash (Persian: مسابقه بزرگ برنده باش, "Win a great race" or "Win" in English) is the Iranian (Persian, Farsi) version of Who Wants to Be a Millionaire?. Premiered on August 19, 2018, on Iran TV channel.<br>When I Joined the Team there was a spaghetti iOS project. adding a simple feature takes a lot of time and may decrease the stability of the project. I took responsibility for creating a project with a new architecture.For the reasons, I chose 'The Clean Architecture' with many relevant latest technologies.<br>( VIPER, RxSwift, RxCocoa, RxStarscream, RxAlamofire, RxDatasource, Hero, Lottie, Firebase)<br>Then trained another iOS developer to develop features based on this architecture<br><br><h4>In this architecture (by Uncle Bob 2017):</h4>- New features will add in the least time.<br>- It's hard to develop feature out of the architecture so that the project will stay clean!</p><br>
+								<p><h3>● PlayCenter (Music Player, Downloader)</h3>
+								<span class="icons PlayCenter"></span><br>Play Center, a new player that you will enjoy playing music with.<br>With Play Center you can play your musics in one place, whether they’re stored in iTunes, Whatsapp, Telegram, etc.<br>You can even download musics from Youtube! Just open up the built-in browser, go to Youtube and click on videos you’d like, Play Center will download them so you can play them offline.<br>Play Center has an intuitive and smooth user interface that you would love working with.<br><br><h4>Key Features:</h4>• Manage songs from all installed programs such as iTunes, Telegram, Whatsapp, Note and ...<br>• Download and store your favorite songs through the in-app browser.(Not 3rd-party web sites) <br>• Import and save songs through iTunes software.<br>• Compatible with Car players.</p><br>
+								<p><h3>● Autoreply pal (Background Location Tracker)</h3>
+								<span class="icons Autoreplypal"></span><br>The AutoReply Pal is an IOS application that track user location in background mode. It can reply to an specific email with specific subject that is pre-defined by the user through the user interface or remotely via trusted user. The app doesn't use any private libraries and every thing developed legally.<br>Developed "Autoreply Pal" iOS application in Objective-C that tracks device location in the background. It can send tracking details via email to the configured recipients.<br><br><h4>Bullet Points:</h4>• Developed a location manager with significant low battery usage(less than 2% battery usage per 5 hours). The component starts automatically running after a phone reboot and with no dependency on third-party libraries.<br>• Integrated Gmail API with the app for sending and receiving emails.<br>• Developed a very accurate alert manager to notify configured recipients of entering the mobile device to predefined location zones.Working with Realm database to store locations, alerts, contacts, etc.<br>• Used Crashlitycs, Onesignal, Flerry, Mailcore-2, AFNetworking-3, Realm.</p><br>
+								<p><h3>● Speed Delivery (like Uber app)</h3>
+								<span class="icons speedapp"></span><br>Speed Inc. is a bike delivery company based in Iran. It develops, markets and operates the Speed motorcycle transportation and package delivery mobile app. <br>Developed “Speed” iOS Application in Swift 4 based on MVVM architecture.“Speed” app connects users and motorcycle drivers. Users can request a motorcycle to deliver their packages or pick them up and take them to their destination.<br><br><h4>Bullet Points:</h4>• Applied relevant design patterns to meet the high quality of code readability and flexibility to future changes<br>• Used Crashlitycs, Firebase, XMPP, Google map’s API, Alamofire, RxSwift, Hero.</p><br><p>Discover more on <a href="https://www.linkedin.com/in/kaazemi/">Linkedin</a>.<br>Or <a href="https://www.linkedin.com/in/kaazemi/">Download</a> the CV.</p>							
 							<div class="close">Close</div></article>
 
 						<!-- About -->
@@ -409,7 +415,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">© Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">©2019 Behrad Kazemi.</p>
 					</footer>
 
 			</div>
