bitly links added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>BEKApps</h1>
-								<p>Hello, I'm <a href="https://www.linkedin.com/in/kaazemi/">Behrad Kazemi</a><br><bt>I'm a Senior iOS Developer</p>
+								<p>Hello, I'm <a href="http://bit.ly/BEKALinkedin">Behrad Kazemi</a><br><bt>I'm a Senior iOS Developer</p>
 							</div>
 						</div>
 						<nav class="use-middle">
@@ -129,14 +129,14 @@
 								<p><h3>● Autoreply pal (Background Location Tracker)</h3>
 								<span class="icons Autoreplypal"></span><br>The AutoReply Pal is an IOS application that track user location in background mode. It can reply to an specific email with specific subject that is pre-defined by the user through the user interface or remotely via trusted user. The app doesn't use any private libraries and every thing developed legally.<br>Developed "Autoreply Pal" iOS application in Objective-C that tracks device location in the background. It can send tracking details via email to the configured recipients.<br><br><h4>Bullet Points:</h4>• Developed a location manager with significant low battery usage(less than 2% battery usage per 5 hours). The component starts automatically running after a phone reboot and with no dependency on third-party libraries.<br>• Integrated Gmail API with the app for sending and receiving emails.<br>• Developed a very accurate alert manager to notify configured recipients of entering the mobile device to predefined location zones.Working with Realm database to store locations, alerts, contacts, etc.<br>• Used Crashlitycs, Onesignal, Flerry, Mailcore-2, AFNetworking-3, Realm.</p><br>
 								<p><h3>● Speed Delivery (like Uber app)</h3>
-								<span class="icons speedapp"></span><br>Speed Inc. is a bike delivery company based in Iran. It develops, markets and operates the Speed motorcycle transportation and package delivery mobile app. <br>Developed “Speed” iOS Application in Swift 4 based on MVVM architecture.“Speed” app connects users and motorcycle drivers. Users can request a motorcycle to deliver their packages or pick them up and take them to their destination.<br><br><h4>Bullet Points:</h4>• Applied relevant design patterns to meet the high quality of code readability and flexibility to future changes<br>• Used Crashlitycs, Firebase, XMPP, Google map’s API, Alamofire, RxSwift, Hero.</p><br><p>Discover more on <a href="https://www.linkedin.com/in/kaazemi/">Linkedin</a>.<br>Or <a href="https://docs.google.com/document/d/1FYeJSWMYmwrsM2EDL_tZTIsxaX5wD9euzpM_K-00COM/edit?usp=sharing">Download</a> the CV.</p>							
+								<span class="icons speedapp"></span><br>Speed Inc. is a bike delivery company based in Iran. It develops, markets and operates the Speed motorcycle transportation and package delivery mobile app. <br>Developed “Speed” iOS Application in Swift 4 based on MVVM architecture.“Speed” app connects users and motorcycle drivers. Users can request a motorcycle to deliver their packages or pick them up and take them to their destination.<br><br><h4>Bullet Points:</h4>• Applied relevant design patterns to meet the high quality of code readability and flexibility to future changes<br>• Used Crashlitycs, Firebase, XMPP, Google map’s API, Alamofire, RxSwift, Hero.</p><br><p>Discover more on <a href="http://bit.ly/BEKALinkedin">Linkedin</a>.<br>Or <a href="http://bit.ly/BEKAResumeEN">Download</a> the CV.</p>							
 							<div class="close">Close</div></article>
 
 						<!-- About -->
 							<article id="about" style="display: none;">
 								<h2 class="major">CV</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt=""></span>
-								<p>You Can Download my latest CV Edition from <a href="https://docs.google.com/document/d/1FYeJSWMYmwrsM2EDL_tZTIsxaX5wD9euzpM_K-00COM/edit?usp=sharing">Here</a></p>
+								<p>You Can Download my latest CV Edition from <a href="http://bit.ly/BEKAResumeEN">Here</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- Contact -->
@@ -164,7 +164,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/KazemiBehrad" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.linkedin.com/in/kaazemi/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="http://bit.ly/BEKALinkedin" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/behrad-kzm" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							<div class="close">Close</div></article>
