--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://twitter.com/KazemiBehrad" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="http://bit.ly/BEKALinkedin" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://github.com/behrad-kzm" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/KazemiBehrad" class="icon"><i class="icon fa-twitter"></i></a></li>
+									<li><a href="http://bit.ly/BEKALinkedin" class="icon"><i class="icon fa fa-linkedin"></i></a></li>
+									<li><a href="https://github.com/behrad-kzm" class="icon"><i class="icon fa fa-github"></i></a></li>
 								</ul>
 							<div class="close">Close</div></article>
 
