--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     <li class="d-flex"><span>Date of birth:</span> <span>July 26, 1995</span></li>
                                     <li class="d-flex"><span>Address:</span> <span>Tehran, Iran</span></li>
                                     <!--		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>-->
-                                    <li class="d-flex"><span>Email:</span> <span>contact@bekapps.com</span></li>
+                                    <li class="d-flex"><span>Email:</span> <span>contact<!--uselessComment-->@be<!--uselessComment-->kapp<!--uselessComment-->s.com</span></li>
                                     <li class="d-flex"><span>Phone: </span> <span>+989125889838</span></li>
                                 </ul>
                             </div>
@@ -853,7 +853,7 @@
                     <div class="col-md-7 ftco-animate text-center">
                         <h2>I'm <span>Available</span> for freelancing</h2>
                         <p></p>
-                        <p class="mb-0"><a href="mailto:contact@bekapps.com?subject=Hiring Request&body=Hey Behrad,%0D%0A%0D%0AI came across your website 'BEKApps.com' and I'm looking for someone like you to hire as a freelancer.%0D%0A%0D%0APlease contact me.%0D%0A%0D%0A%0D%0A[This message sent via 'HIRE ME' button ]" class="btn btn-primary py-3 px-5">Hire me</a></p>
+                        <p class="mb-0"><a href="mailto:?subject=Hiring Request&body=Hey Behrad,%0D%0A%0D%0AI came across your website 'BEKApps.com' and I'm looking for someone like you to hire as a freelancer.%0D%0A%0D%0APlease contact me.%0D%0A%0D%0A%0D%0A[This message sent via 'HIRE ME' button ]" class="btn btn-primary py-3 px-5">Hire me</a></p>
                     </div>
                 </div>
             </div>
@@ -899,7 +899,7 @@
                             </div>
                             <div>
                                 <h3 class="mb-4">Email Address</h3>
-                                <p><a href="mailto:contact@bekapps.com">contact@bekapps.com</a></p>
+                                <p><a href="mailto:">c<!--uselessComment-->ontact<!--uselessComment-->@beka<!--uselessComment-->pps.com</a></p>
                             </div>
                         </div>
                     </div>
@@ -992,7 +992,7 @@
                                 <ul>
                                     <li><span class="icon icon-map-marker"></span><span class="text">Iran, Tehran, Tehran.</span></li>
                                     <li><a href="tel://+989125889838"><span class="icon icon-phone"></span><span class="text">+98 912 5889838</span></a></li>
-                                    <li><a href="mailto:contact@bekapps.com"><span class="icon icon-envelope"></span><span class="text">contact@bekapps.com</span></a></li>
+                                    <li><a href="mailto:"><span class="icon icon-envelope"></span><span class="text">contact<!--uselessComment-->@beka<!--uselessComment-->pps.com</span></a></li>
                                 </ul>
                             </div>
                         </div>
