--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <span class="number" data-number="10">0</span>
                                 <span>Projects completed</span>
                                 </p>
-                                <p><a href="http://bit.ly/BEKAResumeEN" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                                <p><a href="bit.ly/BEKCV2021Late" class="btn btn-primary py-3 px-3">Download CV</a></p>
                             </div>
                         </div>
                     </div>
